# sptptw-bptl

./: .gitignore  LICENSE  README.md  pyproject.toml
instances/: README.md
instances/corrected/dmax2min/: Complete_n100N10_dmax2min_avg050.txt  Complete_n100N10_dmax2min_avg100.txt  Complete_n100N30_dmax2min_avg050.txt  Complete_n100N30_dmax2min_avg100.txt  Complete_n100N50_dmax2min_avg050.txt  Complete_n100N50_dmax2min_avg100.txt  Complete_n100N70_dmax2min_avg050.txt  Complete_n100N70_dmax2min_avg100.txt  Complete_n100_k10_s3_dmax2min_avg050.txt  Complete_n100_k10_s3_dmax2min_avg100.txt  Complete_n100_k10_s4_dmax2min_avg050.txt  Complete_n100_k10_s4_dmax2min_avg100.txt  Complete_n100_k10_s9_dmax2min_avg050.txt  Complete_n100_k10_s9_dmax2min_avg100.txt  Complete_n100_k15_s2_dmax2min_avg050.txt  Complete_n100_k15_s2_dmax2min_avg100.txt  Complete_n100_k15_s3_dmax2min_avg050.txt  Complete_n100_k15_s3_dmax2min_avg100.txt  Complete_n100_k15_s6_dmax2min_avg050.txt  Complete_n100_k15_s6_dmax2min_avg100.txt  Complete_n100_k20_s2_dmax2min_avg050.txt  Complete_n100_k20_s2_dmax2min_avg100.txt  Complete_n100_k20_s4_dmax2min_avg050.txt  Complete_n100_k20_s4_dmax2min_avg100.txt  Complete_n100_k5_s19_dmax2min_avg050.txt  (+427 more)
results/raw/: bptl.csv  labeling.csv
results/validation/: bptl_solutions.csv  corrected.csv  correction_report.csv  labeling_solutions.csv
scripts/: run_benchmark.py  run_single.py
scripts/dataset/: fix_instances.py  validate_instances.py  validate_solutions.py
src/sptptw/: __init__.py  correction.py  graph.py  instance_io.py  solution.py  validation.py
(+3198 files in other folders)
